Added some new features
- Inline Input: Custom textarea for adding notes (replaced native prompt).
- Hover Cards: Logic to display notes on hover with custom scrollbars and delete functionality.
- Navigator Widget: Bottom-right floating list acting as a 'Table of Contents' for page highlights.

--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,7 @@
         "utils/storage.js", 
         "content/highlighter.js", 
         "content/ui.js",
+        "content/navigator.js",
         "content/content.js"
       ],
       "css": ["content/styles.css"],
